--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
     width: 100%;
-    margin: 30px;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     background-color: antiquewhite;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #profile-container {
@@ -21,12 +24,12 @@ body {
 }
 
 #footer {
-   width: 100%;
-   height: 50px;
-   line-height: 50px;
-   background-color: burlywood;
-   text-align: center;
-   color: white; 
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background-color: burlywood;
+    text-align: center;
+    color: white; 
 }
 
 #header {
